[gd_scene load_steps=3 format=3 uid="uid://b1r068wojs3es"]

[ext_resource type="Script" uid="uid://c2jpp32mckrhm" path="res://Assets/Scripts/pause_menu.gd" id="1_jbhf4"]
[ext_resource type="FontFile" uid="uid://c3kgg01yof5so" path="res://Assets/Sprites/MonsterFriendFore.otf" id="2_6udtp"]

[node name="PauseMenu" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_jbhf4")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -578.0
offset_top = -324.0
offset_right = 574.0
offset_bottom = 324.0
grow_horizontal = 2
grow_vertical = 2

[node name="RichTextLabel" type="RichTextLabel" parent="."]
layout_mode = 0
offset_left = -6.0
offset_top = 213.0
offset_right = 1157.0
offset_bottom = 448.0
theme_override_fonts/normal_font = ExtResource("2_6udtp")
theme_override_font_sizes/normal_font_size = 30
text = "Pause"
horizontal_alignment = 1

[node name="ResumeButton" type="Button" parent="."]
layout_mode = 2
offset_left = 468.0
offset_top = 281.0
offset_right = 678.0
offset_bottom = 306.0
theme_override_fonts/font = ExtResource("2_6udtp")
text = "Resume"

[node name="MainMenuButton" type="Button" parent="."]
layout_mode = 2
offset_left = 468.0
offset_top = 316.0
offset_right = 678.0
offset_bottom = 341.0
theme_override_fonts/font = ExtResource("2_6udtp")
text = "Main Menu"

[node name="QuitButton" type="Button" parent="."]
layout_mode = 2
offset_left = 468.0
offset_top = 353.0
offset_right = 678.0
offset_bottom = 378.0
theme_override_fonts/font = ExtResource("2_6udtp")
text = "Quit"

[node name="VolumeSlider" type="HSlider" parent="."]
layout_mode = 0
offset_left = 407.0
offset_top = 382.0
offset_right = 738.0
offset_bottom = 452.0
max_value = 1.0
step = 0.05
